--- a/app/components/widgets/SkillCard/SkillCard.module.css
+++ b/app/components/widgets/SkillCard/SkillCard.module.css
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 92%;
-  max-width: 1200px;
+  justify-content: center;
+  width: 96%;
+  max-width: inherit;
   height: auto;
   margin: 0 auto;
   background-size: cover;
@@ -12,14 +13,22 @@
   @media (min-width: 768px) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    align-items: center;
     justify-content: center;
+
+    width: 96%;
+    max-width: inherit;
+    height: auto;
+    margin: 0 auto;
+    background-size: cover;
+    background-color: #fffdfa;
   }
 }
 
 .cardcontainer {
   display: flex;
   flex-direction: column;
-  margin: 1em;
+  margin: 0.5em;
   padding: 1em;
   max-width: 400px;
   height: 15em;
@@ -29,13 +38,10 @@
   border-bottom: solid 2px rgba(133, 133, 133, 0.1);
 }
 
-.icon {
-  padding: auto;
-}
-
 .iconlabel {
   display: flex;
   flex-direction: row;
+  margin-bottom: 1em;
 }
 
 .label {
@@ -43,8 +49,11 @@
   font-size: 18px;
   margin-bottom: 1em;
   border-bottom: solid 2px rgba(133, 133, 133, 0.1);
+  word-break: normal;
 }
 
 .description {
-  font-size: clamp(17px);
+  flex: 1;
+  font-size: 17px;
+  overflow-y: auto;
 }
