--- a/app/components/pageElement/BlogList/BlogList.module.css
+++ b/app/components/pageElement/BlogList/BlogList.module.css
@@ -1,6 +1,7 @@
 .postslayout {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(1, 1fr);
   align-items: stretch;
   width: 100%;
   height: auto;
