--- a/app/components/widgets/IntroCard/IntroCard.module.css
+++ b/app/components/widgets/IntroCard/IntroCard.module.css
@@ -19,6 +19,14 @@
   overflow-wrap: break-word;
 }
 
+.url > h3 {
+  padding-top: 1em;
+}
+
+.url > a:hover {
+  text-decoration: underline;
+}
+
 .text > p {
   font-size: 1.2em;
   margin-top: 1em;
