[fix]box-shadowを統一

--- a/app/blog/[id]/article.module.css
+++ b/app/blog/[id]/article.module.css
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
   background-color: #ffffff;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   padding: 1em;
+  box-shadow:
+    5px 5px 10px #edebe9,
+    -5px -5px 10px #ffffff;
 }
 
 .eyecatch,
@@ -21,7 +23,9 @@
 .title {
   margin-top: 2em;
   margin-bottom: 1em;
-  border-bottom: solid 2px rgba(133, 133, 133, 0.1);
+  padding: 1em 0;
+  border-top: dotted 3px #999999;
+  border-bottom: dotted 3px #999999;
 }
 
 .textcontainer {
