--- a/app/components/layout/Menu/SidePanel/PanelBody/PanelBody.module.css
+++ b/app/components/layout/Menu/SidePanel/PanelBody/PanelBody.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   height: 100%;
 }
