--- a/app/components/widgets/IntroCard/IntroCard.module.css
+++ b/app/components/widgets/IntroCard/IntroCard.module.css
@@ -6,8 +6,10 @@
   max-width: inherit;
   height: auto;
   background-color: #ffffff;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   border-radius: 12px;
+  box-shadow:
+    5px 5px 10px #edebe9,
+    -5px -5px 10px #ffffff;
 }
 
 .title {
