--- a/app/components/widgets/SkillCard/SkillCard.module.css
+++ b/app/components/widgets/SkillCard/SkillCard.module.css
@@ -33,9 +33,10 @@
   max-width: 400px;
   height: 15em;
   background-color: #ffffff;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   border-radius: 12px;
-  border-bottom: solid 2px rgba(133, 133, 133, 0.1);
+  box-shadow:
+    5px 5px 10px #edebe9,
+    -5px -5px 10px #ffffff;
 }
 
 .iconlabel {
