--- a/app/components/widgets/SkillIconList/SkillIconList.module.css
+++ b/app/components/widgets/SkillIconList/SkillIconList.module.css
@@ -7,9 +7,10 @@
   max-width: inherit;
   height: auto;
   background-color: #ffffff;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   border-radius: 12px;
-  border-bottom: solid 2px rgba(133, 133, 133, 0.1);
+  box-shadow:
+    5px 5px 10px #edebe9,
+    -5px -5px 10px #ffffff;
 }
 
 .iconlist {
