[feat]footerにgithubのリンク追加

--- a/app/components/layout/Footer/Footer.module.css
+++ b/app/components/layout/Footer/Footer.module.css
@@ -10,3 +10,10 @@
   justify-content: center;
   align-items: center;
 }
+
+.githublink {
+  display: flex;
+  position: absolute;
+  right: 0;
+  padding-right: 8px;
+}
