--- a/app/components/layout/Menu/SidePanel/PanelBody/MenuEntry/MenuEntry.module.css
+++ b/app/components/layout/Menu/SidePanel/PanelBody/MenuEntry/MenuEntry.module.css
@@ -7,6 +7,7 @@
   font-size: 20px;
   background-color: transparent;
   color: #666564;
+  flex-shrink: 0;
 }
 .entries:hover {
   background-color: #eff4f5;
